force-app/main/default/objects/OI_Org_Health_Metric_Config__mdt/fields/Formula_Description__c.field-meta.xml
<CustomField>
    <fullName>Formula_Description__c</fullName>
    <label>Formula Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
    <description
  >Human-readable explanation shown verbatim in oiHealthFormulaDisclosure — read directly by the DTO so the displayed formula can never drift from the number actually computed.</description>
</CustomField>