force-app/main/default/objects/OI_Org_Health_Metric_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description
  >Deactivating retires a metric from computation without deleting its config history.</description>
</CustomField>