force-app/main/default/objects/OI_Org_Health_Metric_Config__mdt/fields/Metric_Key__c.field-meta.xml
<CustomField>
    <fullName>Metric_Key__c</fullName>
    <label>Metric Key</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description
  >e.g. MetadataHealth.HighFieldCount — unique within Section_Key__c.</description>
</CustomField>