force-app/main/default/objects/OI_Org_Health_Metric_Config__mdt/fields/Section_Key__c.field-meta.xml
<CustomField>
    <fullName>Section_Key__c</fullName>
    <label>Section Key</label>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
    <description
  >Matches OI_Org_Health_Section_Config__mdt.Section_Key__c.</description>
</CustomField>