force-app/main/default/objects/OI_Org_Health_Metric_Config__mdt/fields/Threshold_Value__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Value__c</fullName>
    <label>Threshold Value</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
    <description
  >Generic numeric knob, meaning defined by Metric_Key__c (e.g. "high field count &#8805; N", "stale if last-modified &gt; N days").</description>
</CustomField>