force-app/main/default/objects/OI_Org_Health_Metric_Config__mdt/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <description
  >0-100 — only meaningful for a section that rolls sub-metrics into one weighted composite score (e.g. Data Health).</description>
</CustomField>